fixing alignment

--- a/about.css
+++ b/about.css
@@ -7,7 +7,7 @@ p {
 
 main {
   /* MAIN */
-  padding: 40px 80px;
+  padding: 15px;
 }
 
 .flex-container {
@@ -50,10 +50,6 @@ a {
 }
 
 @media screen and (max-width: 620px) {
-  main {
-    padding: 15px;
-  }
-
   p {
     font-size: 14px;
   }
